<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" >
    </EditText>

    <EditText
        android:id="@+id/email_id"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_below="@+id/phone_number"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <ImageButton
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_id"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/date"
        android:contentDescription="@string/selectdate"
        android:cropToPadding="true"
        android:src="@drawable/calendar_icon" />

    <Button
        android:id="@+id/proceed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/custom_buttons"
        android:text="@string/proceed"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/dateButton"
        android:layout_alignLeft="@+id/email_id"
        android:background="@drawable/edittext"
        android:clickable="false"
       	android:hint="@string/dob"
        android:ems="10"
        android:inputType="date" />

</RelativeLayout>
